Bug 17581 - Loyalty: information alert has too big height

--- a/skins/weborder_mobile/css/main.css
+++ b/skins/weborder_mobile/css/main.css
@@ -151,6 +151,7 @@ textarea, input {
 }
 
 #popup_content {
+    background: transparent !important;
     font-size: 1em !important;
 }
 
