--- a/skins/weborder_mobile/css/themes/default/colors.css
+++ b/skins/weborder_mobile/css/themes/default/colors.css
@@ -40,10 +40,6 @@ body {
 #content .modifiers-bottom-line:before {
     border-color: #5c5d5d;
 }
-#popup_content {
-    background-position: 1.5em 1em;
-    background: transparent !important;
-}
 #popup_content:before {
     color: #3f7ca4;
     text-shadow: 0 0 1px #3f7ca4;
